app-code/netdata/netdata.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: netdata
  namespace: monitoring
  labels:
    app: netdata
spec:
  selector:
    matchLabels:
      app: netdata
  template:
    metadata:
      labels:
        app: netdata
    spec:
      hostNetwork: true
      hostPID: true
      dnsPolicy: ClusterFirstWithHostNet
      
      securityContext:
        seccompProfile:
          type: Unconfined
        appArmorProfile:
          type: Unconfined

      containers:
        - name: netdata
          image: netdata/netdata:latest
          securityContext:
            runAsUser: 0
            privileged: true
            allowPrivilegeEscalation: true
          ports:
            - containerPort: 19999
              name: webui
              protocol: TCP
          volumeMounts:
            - name: proc
              mountPath: /host/proc
              readOnly: true
            - name: sys
              mountPath: /host/sys
              readOnly: true
            - name: os-release
              mountPath: /host/etc/os-release
              readOnly: true
      volumes:
        - name: proc
          hostPath:
            path: /proc
        - name: sys
          hostPath:
            path: /sys
        - name: os-release
          hostPath:
            path: /etc/os-release
---
apiVersion: v1
kind: Service
metadata:
  name: netdata-svc
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    app: netdata
  ports:
    - port: 19999
      targetPort: 19999
      name: webui
